--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
+asgiref==3.6.0
+backports.zoneinfo==0.2.1
 colorama==0.4.6
+Django==4.2
+image==1.5.33
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 pika==1.3.1
+Pillow==9.5.0
+psutil==5.9.4
 pypng==0.20220715.0
 qrcode==7.4.2
+six==1.16.0
+sqlparse==0.4.3
 typing_extensions==4.5.0
+tzdata==2023.3
